--- a/package.json
+++ b/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
-  },  
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@picocss/pico": "^2.0.6",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "pg": "^8.13.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
